<resources>
    <string name="app_name">JOBLINK</string>

    <!-- Strings do Login -->
    <string name="login">Faça Login</string>
    <string name="email">Digite seu email</string>
    <string name="password">Digite uma senha</string>
    <string name="sign_in">Entrar</string>
    <string name="biometria">Biometria</string>
    <string name="esqueceu">Esqueceu sua senha ?</string>
    <string name="criarconta">Criar Conta</string>
    <string name="register">Cadastro</string>

    <!-- Strings de Cadastro -->
    <string name="name">Nome Completo</string>
    <string name="sexo">Sexo</string>
    <string name="birth_date_register">Data de Nascimento</string>
    <string name="cpf_register">Digite seu CPF</string>
    <string name="address_register">Insira seu endereço</string>
    <string name="email_login">E-mail</string>
    <string name="password_login">Senha</string>
    <string name="termos">Concordo com os termos.</string>
    <string name="crate">Create Account</string>
    <string name="forms1">Selecione o tipo de serviço</string>
    <string name="forms2">Selecione a urgência do serviço</string>
    <string name="forms3">Selecione o atendimento</string>
    <string name="message">Digite sua mensagem</string>
    <string name="enviar">Enviar</string>
    <string name="contact">Entrar em Contato</string>
    <string name="type_a_message">Digite uma mensagem…</string>
    <string name="Create_an_account">Criar Conta</string>
    <string name="seek_a_profession">Busque por uma profissão</string>
    <string name="categories">Categorias</string>
    <string name="descriptions_profession_image">Imagens da Profissão</string>

    <!--  Provisório-->
    <string-array name="categorias">
        <item>Categorias</item>
        <item>Consertos elétricos</item>
        <item>Consertos mecânicos</item>
        <item>Encanamento</item>
        <item>Pintura de residências</item>
        <item>Problemas de inernet e rede de computadores</item>
        <item>Costura e remendo de roupas</item>
        <item>Websites e interface gráfica</item>
        <item>Contabilidade</item>
        <item>Conserto de celulares</item>
        <item>Serviços de engenharia civil</item>
        <item>Mudanças e carretos</item>
        <item>Consertos de eletrodomésticos</item>
        <item>Advocacia</item>
    </string-array>

    <string-array name="tipo_servico">
        <item>Online</item>
        <item>Presencial</item>
    </string-array>

    <string-array name="urgencia">
        <item>Indiferente</item>
        <item>Baixa</item>
        <item>Média</item>
        <item>Alta</item>
        <item>Urgente</item>
    </string-array>

    <string-array name="avaliacao">
        <item>Sim</item>
        <item>Não</item>
    </string-array>


    <!-- Strings de Start !-->
    <string name="selecione">Ao selecionar o perfil, você será encaminhado (a) para a página escolhida.</string>
    <string name="titulo_start">Olá! Seja bem-vindo(a) ao JobLink!</string>
    <string name="selecione_start">Selecione o seu perfil.</string>

    <!-- Strings de Publicação !-->
    <string name="criar">Criar uma nova publicação.</string>
    <string name="description">Descrição:</string>
    <string name="image">Imagem (opcional)</string>
    <string name="urgencia">Urgência:</string>
    <string name="urgencia1">Baixa</string>
    <string name="urgencia2">Média</string>
    <string name="urgencia3">Alta</string>
    <string name="publicar">Publicar</string>

    <!-- Strings de avaliação de serviço!-->
    <string name="mascara">O prestador de serviços utilizou máscara durante o atendimento?</string>
    <string name="distancia">O prestador de serviços manteve o distanciamento social?</string>
    <string name="higiene">O prestador de serviços manteve a higiene das mãos?</string>

</resources>