<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundOffice"
    android:orientation="vertical">

    <TextView
        android:id="@+id/cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/register"
        android:textColor="@color/colorTitles"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastro">

        <ImageView
            android:id="@+id/image_view_cadastro"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/cadastro"
            android:layout_centerHorizontal="true"
            android:background="@drawable/add_photo" />

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/container_register"
        style="@style/ContainerComponents"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <ScrollView
        android:id="@+id/scrollView_register"
        android:layout_width="0dp"
        android:layout_height="260dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/container_register"
        app:layout_constraintEnd_toEndOf="@+id/container_register"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/container_register"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_name"
                    style="@style/edit_text_scrollView"
                    android:hint="@string/name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_sexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_sexo"
                    style="@style/edit_text_scrollView"
                    android:hint="@string/sexo" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_nascimento"
                    style="@style/edit_text_scrollView"
                    android:hint="@string/birth_date_register"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_cpf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_cpf"
                    style="@style/edit_text_scrollView"
                    android:hint="@string/cpf_register"
                    android:inputType="numberSigned" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_email_register"
                    style="@style/edit_text_scrollView"
                    android:hint="@string/email_login"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    style="@style/edit_text_scrollView"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/password_login"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <!--    <CheckBox-->
    <!--        android:id="@+id/checkBox"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:layout_marginBottom="16dp"-->
    <!--        android:paddingStart="8dp"-->
    <!--        android:text="Concordo com os Termos"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/button_criar_conta"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/container_register" />-->

    <Button
        android:id="@+id/button_back_register"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/back_button"
        android:drawableTop="@drawable/ic_arrow_right_24"
        android:drawableTintMode="src_atop"
        android:paddingTop="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/button_criar_conta"
        app:layout_constraintStart_toStartOf="@+id/scrollView_register" />

    <Button
        android:id="@+id/button_criar_conta"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_orange_rounded"
        android:fontFamily="@font/rubik"
        android:text="@string/criarconta"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_register" />

</androidx.constraintlayout.widget.ConstraintLayout>