<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Forms">


    <EditText
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="85dp"
        android:background="@drawable/back_button"
        android:drawableRight="@drawable/ic_baseline_location_on_24"
        android:hint="Localização"
        android:paddingLeft="10dp"
        android:paddingRight="15dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/forms1"
            android:textColor="@android:color/black" />

        <Spinner
            android:layout_width="145dp"
            android:layout_height="30dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="40dp"
            android:entries="@array/categorias" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="260dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/forms2"
            android:textColor="@android:color/black" />

        <Spinner
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="40dp"
            android:entries="@array/urgencia" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="370dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/forms3"
            android:textColor="@android:color/black" />

        <Spinner
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="40dp"
            android:entries="@array/tipo_servico" />


    </LinearLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="500dp"
        android:text="SALVAR"
        android:textStyle="bold" />


</RelativeLayout>